--- a/BirdFarmShop/Pages/HomePage.cshtml
+++ b/BirdFarmShop/Pages/HomePage.cshtml
@@ -58,7 +58,7 @@
                 <ul class="navbar-list">
 
                     <li>
-                        <a href="#home" class="navbar-link" data-nav-link>
+                        <a asp-page="HomePage" class="navbar-link" data-nav-link>
                             <span>Trang chủ</span>
 
                             <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
