--- a/BirdFarmShop/Pages/Manager/StaffManagement/Create.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Create.cshtml
@@ -143,18 +143,14 @@
 
 
                                 <div class="info">
-                                    <h5>WardId:</h5>
+                                    <h5>Ward Name:</h5>
                                     <select asp-for="TblUser.WardId" class="form-control" asp-items="ViewBag.WardName"></select>
                                 </div>
                                 <div class="info">
-                                    <h5>DistrictId:</h5>
+                                    <h5>District Name:</h5>
                                     <select asp-for="TblUser.DistrictId" class="form-control" asp-items="ViewBag.DistrictName"></select>
                                 </div>
-                                <div class="info">
-                                    <h5>Role:</h5>
-                                    <select asp-for="TblUser.RoleId" class="form-control" aria-label="ViewBag.RoleName">
-                                    </select>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="button">
