--- a/BirdFarmShop/Pages/Cart.cshtml
+++ b/BirdFarmShop/Pages/Cart.cshtml
@@ -2,52 +2,85 @@
 @model BirdFarmShop.Pages.CartModel
 @{
 }
-<html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/cart.css">
     <title>Cart</title>
 </head>
 <body>
-   
+    <div class="cart_section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="cart_container">
+                        <div class="cart_title">Shopping Cart<small> (1 item in your cart) </small></div>
+                        <div class="cart_items">
+                            <ul class="cart_list">
+                                <form method="post" asp-page="cart" asp-page-handler="update">
 
-    <h3>Cart</h3>
-    <form method="post" asp-page="cart" asp-page-handler="update">
-        <table border="1">
-            <tr>
-                <th>Action</th>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Photo</th>
-                <th>Price</th>
-                <th>Quantity <input type="submit" value="Update" /></th>
-                <th>Sub Total</th>
-            </tr>
-            @foreach (var item in Model.cart)
-            {
-                <tr align="center">
-                    <td align="center">
-                        <a asp-page="cart" asp-page-handler="delete" asp-route-id="@item.bird.BirdId">Remove</a>
-                    </td>
-                    <td>@item.bird.BirdId</td>
-                    <td>@item.bird.BirdName</td>
-                    <td><img src="~/img/chim1.png" width="120" height="100" /></td>
-                    <td>@item.bird.Price VNĐ</td>
-                    <td><input type="number" name="quantities" value="@item.Quantity" min="1" style="width: 50px;" /></td>
-                    <td>
-                        @(item.bird.Price * item.Quantity) VNĐ
-                    </td>
-                </tr>
-            }
-            <tr>
-                <td colspan="6" align="right">Total</td>
-                <td align="center">@Model.Total VNĐ</td>
-            </tr>
-        </table>
-        
-    </form>
+                                    @foreach (var item in Model.cart)
+                                    {
+                                    <li class="cart_item clearfix">
+                                        <div class="cart_item_image"><img src="https://i.imgur.com/qqBRWD5.jpg" alt=""></div>
+                                        <div class="cart_item_info d-flex align-content-center flex-md-row justify-content-between">
+                                            <div class="cart_item_name cart_info_col">
+                                                <div class="cart_item_title">Name</div>
+                                                <div class="cart_item_text">@item.bird.BirdName</div>
+                                            </div>
+                                            <div class="cart_item_quantity cart_info_col">
+                                                <div class="cart_item_title">Quantity</div>
 
-    <a asp-page="CheckOut">Buy</a>
-    <a asp-page="ShowAllBirds">Continue Shopping</a>
+                                                <div class="cart_item_text"><input type="number" name="quantities" value="@item.Quantity" min="1" style="width: 50px;" /></div>
+                                            </div>
+                                            <div class="cart_item_price cart_info_col">
+                                                <div class="cart_item_title">Price</div>
+                                                <div class="cart_item_text">@item.bird.Price VNĐ</div>
+                                            </div>
+                                            <div class="cart_item_total cart_info_col">
+                                                <div class="cart_item_title">Sub Total</div>
+                                                <div class="cart_item_text">@(item.bird.Price * item.Quantity) VNĐ</div>
+                                            </div>
 
+                                            <div class="cart_item_total cart_info_col">
+                                                <div class="cart_item_title"></div>
+                                                <div class="cart_item_text"><input type="submit" value="Update" /><i class="fa-solid fa-code-compare"></i></div>
+                                            </div>
+                                            <div class="cart_item_total cart_info_col">
+                                                <div class="cart_item_title"></div>
+                                                <div class="cart_item_text"><a asp-page="cart" asp-page-handler="delete" asp-route-id="@item.bird.BirdId"><i class="fa-solid fa-trash"></i></a></div>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    }
+                                </form>
+                            </ul>
+                        </div>
+                        <div class="order_total">
+                            <div class="order_total_content text-md-right">
+                                <div class="order_total_title">Order Total:</div>
+                                <div class="order_total_amount">@Model.Total VNĐ</div>
+                            </div>
+                        </div>
+                        <div class="cart_buttons">
+                            <a asp-page="ShowAllBirds"><button type="button" class="button cart_button_clear">Continue Shopping</button></a>
+                            <a asp-page="CheckOut"><button type="button" class="button cart_button_checkout">Buy</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/6bf3556146.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 </body>
-</html>
