--- a/BirdFarmShop/Pages/Manager/StaffManagement/Index.cshtml
+++ b/BirdFarmShop/Pages/Manager/StaffManagement/Index.cshtml
@@ -161,17 +161,7 @@
                                             @Html.DisplayFor(modelItem => item.Phone)
                                         </td>
                                         <td>
-                                            <select class="form-select-sm" aria-label="Default select example">
-                                                <option selected>Choose</option>
-                                                @if (item.UserStatus == true)
-                                                {
-                                                <option value="1">@Html.DisplayFor(modelItem => item.UserStatus)</option>
-                                                }
-                                                else
-                                                {
-                                                <option value="2">@Html.DisplayFor(modelItem => item.UserStatus)</option>
-                                                }
-                                            </select>
+                                            @Html.DisplayFor(modelItem => item.UserStatus)
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.RoleName)
