--- a/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
+++ b/BirdFarmShop/Pages/Admin/UserManagement/ShowUserList.cshtml
@@ -30,15 +30,21 @@
             <div class="side-menu">
                 <ul>
                     <li>
-                        <a href="" class="active">
+                        <a asp-page="/Admin/UserManagement/ShowUserList" class="active">
                             <span><i class="fa-solid fa-user-tie"></i></span>
                             <small>User</small>
                         </a>
                     </li>
                     <li>
-                        <a asp-page="./BirdManagement">
+                        <a asp-page="/Admin/BirdManagement/Index">
                             <span><i class="fa-solid fa-kiwi-bird"></i></span>
                             <small>Bird</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-page="/Admin/OrderManagement/Index">
+                            <span class="las la-shopping-cart"></span>
+                            <small>Orders</small>
                         </a>
                     </li>
                     <li>
@@ -53,12 +59,7 @@
                             <small>Projects</small>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-shopping-cart"></span>
-                            <small>Orders</small>
-                        </a>
-                    </li>
+                    
                     <li>
                         <a href="">
                             <span class="las la-tasks"></span>
@@ -80,25 +81,13 @@
                 </label>
 
                 <div class="header-menu">
-                    <label for="">
-                        <span class="las la-search"></span>
-                    </label>
-
-                    <div class="notify-icon">
-                        <span class="las la-envelope"></span>
-                        <span class="notify">4</span>
-                    </div>
-
-                    <div class="notify-icon">
-                        <span class="las la-bell"></span>
-                        <span class="notify">3</span>
-                    </div>
+                    
 
                     <div class="user">
                         <div class="bg-img" style="background-image: url(img/1.jpeg)"></div>
 
                         <span class="las la-power-off"></span>
-                        <a class="actions" asp-page="./Logout">Logout</a>
+                        <a class="actions" asp-page="/Logout">Logout</a>
                     </div>
                 </div>
             </div>
