--- a/BirdFarmShop/Pages/Cart.cshtml
+++ b/BirdFarmShop/Pages/Cart.cshtml
@@ -24,7 +24,7 @@
                                     @foreach (var item in Model.cart)
                                     {
                                     <li class="cart_item clearfix">
-                                        <div class="cart_item_image"><img src="https://i.imgur.com/qqBRWD5.jpg" alt=""></div>
+                                        <div class="cart_item_image"><img src="@item.bird.Image" alt=""></div>
                                         <div class="cart_item_info d-flex align-content-center flex-md-row justify-content-between">
                                             <div class="cart_item_name cart_info_col">
                                                 <div class="cart_item_title">Name</div>
