--- a/BirdFarmShop/Pages/Manager/OrderManagement/Index.cshtml
+++ b/BirdFarmShop/Pages/Manager/OrderManagement/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+@* <h1>Index</h1>
 
 <table class="table">
     <thead>
@@ -81,3 +81,193 @@
 }
     </tbody>
 </table>
+ *@
+
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <title>Modern Admin Dashboard</title>
+    <link rel="stylesheet" href="~/css/admin.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body>
+    <input type="checkbox" id="menu-toggle">
+    <div class="sidebar">
+        <div class="side-header">
+            <h3>B<span>ird</span></h3>
+        </div>
+
+        <div class="side-content">
+            =
+            @* <div class="profile">
+            <div class="profile-img bg-img" style="background-image:url(@Model.TblUserDTO.image)"> </div>
+            <h4></h4>
+            <small>@Model.TblUserDTO.FullName</small>
+            </div> *@
+            <div class="side-menu">
+                <ul>
+                    <li>
+                        <a asp-page="/Manager/StaffManagement/Index" class="active">
+                            <span><i class="fa-solid fa-user-tie"></i></span>
+                            <small>User</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-page="/Manager/BirdManagement/Index">
+                            <span><i class="fa-solid fa-kiwi-bird"></i></span>
+                            <small>Bird</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-page="/Manager/OrderManagement/Index">
+                            <span class="las la-shopping-cart"></span>
+                            <small>Orders</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-envelope"></span>
+                            <small>Mailbox</small>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <span class="las la-clipboard-list"></span>
+                            <small>Projects</small>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <span class="las la-tasks"></span>
+                            <small>Tasks</small>
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-content">
+
+        <header>
+            <div class="header-content">
+                <label for="menu-toggle">
+                    <span class="las la-bars"></span>
+                </label>
+
+                <div class="header-menu">
+
+
+                    <div class="user">
+                        <div class="bg-img" style="background-image: url(img/1.jpeg)"></div>
+
+                        <span class="las la-power-off"></span>
+                        <a class="actions" asp-page="./Logout">Logout</a>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+
+        <main>
+
+            <div class="page-header">
+                <h1>Dashboard</h1>
+                <small>Home / Dashboard</small>
+            </div>
+
+            <div class="page-content">
+
+                <div class="records table-responsive">
+
+                    <div class="record-header">
+
+                        <a asp-page="Create"><button class="btn btn-primary">Create</button></a>
+                        <div class="browse">
+                            <input type="search" placeholder="Search" class="record-search">
+
+                        </div>
+                    </div>
+
+                    <div>
+                        <table width="100%">
+                            <thead>
+                                <tr>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblOrder[0].OrderId)</th>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblOrder[0].ReasonContent)</th>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblOrder[0].TypeOrder)</th>
+                                    <th><span class="las la-sort"></span> @Html.DisplayNameFor(model => model.TblOrder[0].OrderStatus)</th>
+                                    <th><span class="las la-sort"></span> @Html.DisplayNameFor(model => model.TblOrder[0].StartDate)</th>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblOrder[0].EndDate)</th>
+                                    <th><span class="las la-sort"></span>@Html.DisplayNameFor(model => model.TblOrder[0].ShipAddress)</th>
+                                    <th><span class="las la-sort"></span>Customer Name</th>
+
+                                    <th><span></span></th>
+                                </tr>
+                            </thead>
+                            @foreach (var item in Model.TblOrder)
+                            {
+                                <tbody class="list">
+                                    <tr class="item">
+                                        <td>@Html.DisplayFor(modelItem => item.OrderId)</td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.ReasonContent)
+                                        </td>
+
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.TypeOrder)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.OrderStatus)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.StartDate)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.EndDate)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.ShipAddress)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.User.FullName)
+                                        </td>
+                                        <td>
+                                            <div class="actions">
+                                                @if (item.OrderStatus == "Cancel" || item.OrderStatus == "Success")
+                                                {
+                                                    <a asp-page="./Details" asp-route-id="@item.OrderId"><span><i class="fa-solid fa-eye"></i></span></a>
+                                                }
+                                                else
+                                                {
+                                                    <a asp-page="./Details" asp-route-id="@item.OrderId"><span><i class="fa-solid fa-eye"></i></span></a>
+                                                    <a asp-page="./Cancel" asp-route-id="@item.OrderId"><span><i class="fa-solid fa-rectangle-xmark"></i></span></a>
+                                                    <a asp-page="./Success" asp-route-id="@item.OrderId"><span><i class="fa-solid fa-circle-check"></i></span></a>
+                                                }
+                                            </div>
+                                        </td>
+
+                                    </tr>
+
+
+                                </tbody>
+                            }
+                        </table>
+                    </div>
+                    <ul class="listPage">
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </main>
+
+    </div>
+    <script src="~/js/admin.js"></script>
+    <script src="https://kit.fontawesome.com/aadd71a7c7.js" crossorigin="anonymous"></script>
+</body>
