--- a/BirdFarmShop/Pages/Manager/OrderManagement/Index.cshtml
+++ b/BirdFarmShop/Pages/Manager/OrderManagement/Index.cshtml
@@ -111,7 +111,7 @@
                     <li>
                         <a asp-page="/Manager/StaffManagement/Index" class="active">
                             <span><i class="fa-solid fa-user-tie"></i></span>
-                            <small>User</small>
+                            <small>Staff</small>
                         </a>
                     </li>
                     <li>
@@ -126,25 +126,7 @@
                             <small>Orders</small>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-envelope"></span>
-                            <small>Mailbox</small>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-clipboard-list"></span>
-                            <small>Projects</small>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="">
-                            <span class="las la-tasks"></span>
-                            <small>Tasks</small>
-                        </a>
-                    </li>
+                    
 
                 </ul>
             </div>
