--- a/BirdFarmShop/wwwroot/css/admin.css
+++ b/BirdFarmShop/wwwroot/css/admin.css
@@ -452,9 +452,12 @@ table {
 .client-info small {
     color: #777;
 }
-
+.actions {
+    display: flex;
+    align-items: center;
+}
 .actions span {
-    display: inline-block;
+    
     font-size: 1.2rem;
     margin-right: .5rem;
 }
