--- a/BirdFarmShop/Pages/Admin/OrderManagement/Index.cshtml
+++ b/BirdFarmShop/Pages/Admin/OrderManagement/Index.cshtml
@@ -100,12 +100,12 @@
         </div>
 
         <div class="side-content">
-            =
-            @* <div class="profile">
+            
+            <div class="profile">
                 <div class="profile-img bg-img" style="background-image:url(@Model.TblUserDTO.image)"> </div>
                 <h4></h4>
                 <small>@Model.TblUserDTO.FullName</small>
-            </div> *@
+            </div>
             <div class="side-menu">
                 <ul>
                     <li>
@@ -126,25 +126,7 @@
                             <small>Orders</small>
                         </a>
                     </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-envelope"></span>
-                            <small>Mailbox</small>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="las la-clipboard-list"></span>
-                            <small>Projects</small>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="">
-                            <span class="las la-tasks"></span>
-                            <small>Tasks</small>
-                        </a>
-                    </li>
+                    
 
                 </ul>
             </div>
