--- a/BirdFarmShop/Pages/HomePage.cshtml
+++ b/BirdFarmShop/Pages/HomePage.cshtml
@@ -83,8 +83,8 @@
 
 
                     <li>
-                        <a href="#" class="navbar-link" data-nav-link>
-                            <span>Liên hệ</span>
+                        <a asp-page="ShowAllBirdChildren" class="navbar-link" data-nav-link>
+                            <span>Bird Children</span>
 
                             <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
                         </a>
