--- a/BirdFarmShop/Pages/Test/Delete.cshtml
+++ b/BirdFarmShop/Pages/Test/Delete.cshtml
@@ -9,44 +9,43 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TblOrderDetail</h4>
+    <h4>TblComment</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblOrderDetail.TotalPrice)
+            @Html.DisplayNameFor(model => model.TblComment.CommentDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblOrderDetail.TotalPrice)
+            @Html.DisplayFor(model => model.TblComment.CommentDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblOrderDetail.Quantity)
+            @Html.DisplayNameFor(model => model.TblComment.Content)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblOrderDetail.Quantity)
+            @Html.DisplayFor(model => model.TblComment.Content)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblOrderDetail.CostsIncurred)
+            @Html.DisplayNameFor(model => model.TblComment.Rating)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblOrderDetail.CostsIncurred)
+            @Html.DisplayFor(model => model.TblComment.Rating)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblOrderDetail.Bird)
+            @Html.DisplayNameFor(model => model.TblComment.Bird)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblOrderDetail.Bird.BirdName)
+            @Html.DisplayFor(model => model.TblComment.Bird.BirdDescription)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TblOrderDetail.Order)
+            @Html.DisplayNameFor(model => model.TblComment.User)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.TblOrderDetail.Order.ShipAddress)
+            @Html.DisplayFor(model => model.TblComment.User.Email)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="TblOrderDetail.OrderId" />
-        <input type="hidden" asp-for="TblOrderDetail.BirdId" />
+        <input type="hidden" asp-for="TblComment.CommentId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
